--- a/toastNotification/toastNotification.css
+++ b/toastNotification/toastNotification.css
@@ -27,4 +27,37 @@ button {
     border-radius: 7px;
     border: none;
     cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    margin: 10px;
+}
+
+button:hover {
+    background-color: rgb(241, 245, 2);
+    color:rgb(226, 45, 151);
+    transform: scale(1.1);
+}
+
+button:focus {
+    outline: none;
+}
+
+button:active {
+    transform: scale(.98);
+}
+
+#toasts {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.toast {
+    background-color: white;
+    color: rgb(29, 54, 216);
+    border-radius: 5px;
+    padding: 1rem 2rem;
+    margin: 0.5rem;
 }
