--- a/githubProfiles/githubProfiles.css
+++ b/githubProfiles/githubProfiles.css
@@ -1,12 +1,15 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Concert One:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Concert One', sans-serif;
+    /* background-image: url('https://images.unsplash.com/photo-1558244661-d248897f7bc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
+    background-size: cover;
+    background-repeat: no-repeat; */
     display: flex;
     flex-direction: column;
     align-items: center;
