--- a/githubProfiles/githubProfiles.css
+++ b/githubProfiles/githubProfiles.css
@@ -7,9 +7,7 @@
 
 body {
     font-family: 'Concert One', sans-serif;
-    /* background-image: url('https://images.unsplash.com/photo-1558244661-d248897f7bc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
     background-size: cover;
-    background-repeat: no-repeat; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,4 +15,15 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(6, 97, 172, 0.6);
+    z-index: -1;
 }
