--- a/githubProfiles/githubProfiles.css
+++ b/githubProfiles/githubProfiles.css
@@ -24,6 +24,32 @@ body::before {
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(6, 97, 172, 0.6);
+    background-color: rgba(72, 162, 235, 0.6);
     z-index: -1;
+}
+
+.user-form {
+    width: 100%;
+    max-width: 700px;
+}
+
+.user-form input {
+    width: 100%;
+    display: block;
+    background-color: aliceblue;
+    border:none;
+    border-radius: 10px;
+    color:rgb(6, 113, 201);
+    padding: 1rem;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+    box-shadow: 5px 10px 18px #888888;
+}
+
+.user-form input::placeholder {
+    color:rgb(6, 113, 201);
+}
+
+.user-form input:focus {
+    outline: none;
 }
