--- a/githubProfiles/githubProfiles.css
+++ b/githubProfiles/githubProfiles.css
@@ -43,7 +43,7 @@ body::before {
     padding: 1rem;
     margin-bottom: 2rem;
     font-size: 1rem;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #07060a;
 }
 
 .user-form input::placeholder {
@@ -58,7 +58,7 @@ body::before {
     max-width: 800px;
     background-color: #1A508B;
     border-radius: 20px;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #05022c;
     display: flex;
     padding: 3rem;
     margin: 0 1.5rem;
@@ -70,4 +70,42 @@ body::before {
     border: 10px solid #0D335D;
     height: 150px;
     width: 150px;
+}
+
+.user-info {
+    color: #eee;
+    margin-left: 2rem;
+}
+
+.user-info h2 {
+    margin-top: 0;
+}
+
+.user-info ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    max-width: 400px;
+}
+
+user-info ul li {
+    display: flex;
+    align-items: center;
+}
+
+.user-info ul li strong {
+    font-size: 0.9rem;
+    margin-left: 0.5rem;
+}
+
+.repo {
+    text-decoration: none;
+    color: #fff;
+    background-color: #0D335D;
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    display: inline-block;
 }
