--- a/doubleHeartClick/dblHeartClick.css
+++ b/doubleHeartClick/dblHeartClick.css
@@ -1,12 +1,13 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Francois One:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Francois One', sans-serif;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +15,15 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(230, 236, 240, 0.3);
+    z-index: -1;
 }
