--- a/doubleHeartClick/dblHeartClick.css
+++ b/doubleHeartClick/dblHeartClick.css
@@ -11,7 +11,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
@@ -26,4 +25,12 @@ body::before {
     height: 100vh;
     background-color: rgba(230, 236, 240, 0.3);
     z-index: -1;
+}
+
+h1 {
+    font-size: 80px;
+    color: #59405C;
+    background: rgb(235, 217, 217, .85);
+    padding: 30px;
+    border-radius: 10px;
 }
