--- a/doubleHeartClick/dblHeartClick.css
+++ b/doubleHeartClick/dblHeartClick.css
@@ -34,6 +34,15 @@ h1 {
     border-radius: 10px;
 }
 
+.subheaders {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: whitesmoke;
+    padding: 20px;
+    border-radius: 10px;
+}
+
 h3 {
     margin-bottom: 0;
 }
@@ -41,6 +50,7 @@ h3 {
 small {
     display: block;
     margin-bottom: 20px;
+
 }
 
 .fa-heart {
