--- a/doubleHeartClick/dblHeartClick.css
+++ b/doubleHeartClick/dblHeartClick.css
@@ -11,8 +11,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+ 
     margin: 0;
+    overflow: scroll;
 }
 
 body::before {
@@ -20,9 +21,10 @@ body::before {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100vh;
+    width:100%;
+    height:100%;
     background-color: rgba(230, 236, 240, 0.3);
+    background-repeat: repeat;
     z-index: -1;
 }
 
