--- a/doubleHeartClick/dblHeartClick.css
+++ b/doubleHeartClick/dblHeartClick.css
@@ -22,7 +22,7 @@ body::before {
     top: 0;
     left: 0;
     width:100%;
-    height:100%;
+    height:975px;
     background-color: rgba(230, 236, 240, 0.3);
     background-repeat: repeat;
     z-index: -1;
@@ -67,14 +67,14 @@ small {
     no-repeat center center/cover;
     margin: auto;
     cursor: pointer;
-    border: whitesmoke 20px solid;
+    border: whitesmoke 10px solid;
     border-radius: 5px;
     max-width: 100%;
     position: relative;
     box-shadow: 5px 10px 8px 10px #0e0c13;
 }
 
-.love-me fa-heart {
+.loveMe .fa-heart {
     position: absolute;
     animation: grow 0.6s linear;
     transform: translate(-50%, -50%) scale(0);
