--- a/autoTextEffect/autoText.css
+++ b/autoTextEffect/autoText.css
@@ -1,12 +1,12 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ultra:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Ultra', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
