--- a/autoTextEffect/autoText.css
+++ b/autoTextEffect/autoText.css
@@ -8,6 +8,7 @@
 body {
     font-family: 'Ultra', sans-serif;
     background-color: #FFC93C;
+    color: #31326F;
     display: flex;
     flex-direction: column;
     align-items: center;
