--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -1,12 +1,12 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas Neue:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +14,15 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(86, 119, 108, .60);
+    z-index: -1;
 }
