--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px;
     overflow: hidden;
     height: 100vh;
     margin: 0;
@@ -25,4 +26,17 @@ body::before {
     height: 100vh;
     background-color: rgb(86, 119, 108, .60);
     z-index: -1;
+}
+
+h2 {
+    margin: 10px 0px 20px;
+    text-align: center; 
+}
+
+.container {
+    background-color: #BFCBA8;
+    box-shadow: 5px 10px 8px 10px #464F41;
+    padding: 22px;
+    width: 400px;
+    max-width: 100%;
 }
