--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Bebas Neue', sans-serif;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,11 +43,6 @@ h2 {
     max-width: 100%;
 }
 
-/* label {
-    font-size: 20px;
-    line-height: 27px;
-    padding: 5px;
-} */
 
 .result-container {
     background-color: #464F41;
@@ -90,6 +86,9 @@ h2 {
 .btn-large {
     display: block;
     width: 100%;
+    font-family: inherit;
+    font-size: 22px;
+    letter-spacing: 1.5px;
 }
 
 
