--- a/checkboxes/checkboxes.css
+++ b/checkboxes/checkboxes.css
@@ -15,3 +15,24 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+    width: 200px;
+}
+
+.toggle {
+    visibility: hidden;
+}
+
+.label {
+    background-color: #A0C1B8;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 15px 0;
+    width: 80px;
+    height: 40px;
+}
