--- a/checkboxes/checkboxes.css
+++ b/checkboxes/checkboxes.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #F4E8C1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,6 +29,7 @@ body {
 }
 
 .label {
+    position: relative;
     background-color: #A0C1B8;
     border-radius: 50px;
     cursor: pointer;
@@ -35,4 +37,20 @@ body {
     margin: 0 15px 0;
     width: 80px;
     height: 40px;
+}
+
+.toggle:checked + .label {
+    background-color: #726A95;
+}
+
+.ball {
+    background: white;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    align-items: center;
+    justify-content: center;
 }
