--- a/checkboxes/checkboxes.css
+++ b/checkboxes/checkboxes.css
@@ -67,3 +67,16 @@ body {
         transform: translateX(40px) scale(1);
     }
 }
+
+@keyframes slideOff {
+    0% {
+        transform: translateX(40px) scale(1);
+    }
+    50% {
+        transform: translateX(20px) scale(1.2);
+    }
+
+    100% {
+        transform: translateX() scale(1);
+    }
+}
