--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -99,3 +99,16 @@ h2 {
     margin: 15px;
     font-size: 18px;
 }
+
+.ball {
+    background: white;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    align-items: center;
+    justify-content: center;
+    animation: slideOff 0.3s linear forwards;
+}
