--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -39,7 +39,7 @@ h2 {
     background-color: #BFCBA8;
     box-shadow: 5px 10px 8px 10px #464F41;
     padding: 22px;
-    width: 400px;
+    width: 450px;
     max-width: 100%;
 }
 
@@ -100,15 +100,35 @@ h2 {
     font-size: 18px;
 }
 
+span {
+    white-space: nowrap;
+
+}
+
+.toggle {
+    visibility: hidden;
+}
+
+.label {
+    position: relative;
+    background-color: #A0C1B8;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    margin-left: 140px;
+    width: 60px;
+    height: 20px;
+}
+
 .ball {
     background: white;
-    height: 34px;
-    width: 34px;
+    height: 22px;
+    width: 22px;
     border-radius: 50%;
     position: absolute;
     top: 3px;
     left: 3px;
-    align-items: center;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
     animation: slideOff 0.3s linear forwards;
 }
