--- a/notesApp/notesApp.css
+++ b/notesApp/notesApp.css
@@ -1,17 +1,28 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display&family=DM+Serif+Text&family=Permanent+Marker&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'DM Serif Text', sans-serif;
+    background-color: #F8F1F1;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    height: 100vh;
     margin: 0;
+    padding-top: 3rem;
+}
+
+.add {
+    position: fixed;
+    top: 2rem;
+    right: 4rem;
+    background-color: #16C79A;
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
 }
