--- a/notesApp/notesApp.css
+++ b/notesApp/notesApp.css
@@ -14,10 +14,12 @@ body {
     justify-content: center;
     margin: 0;
     padding-top: 3rem;
+    margin-bottom: 10rem;
 }
 
 .add {
     position: fixed;
+    color: #19456B;
     top: 2rem;
     right: 4rem;
     background-color: #16C79A;
@@ -25,4 +27,44 @@ body {
     border-radius: 4px;
     padding: 0.5rem 1rem;
     cursor: pointer;
+}
+
+.note {
+    background-color: azure;
+    box-shadow: 0 0 10px 4px rgba(0, 0, 0 , 0.1);
+    margin: 30px 20px;
+    height: 400px;
+    width: 400px;
+}
+
+.note .tools {
+    background-color: #16C79A;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.5rem; 
+}
+
+.note .tools button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 0.5rem;
+}
+
+.note textarea {
+    outline: none;
+    font-family: 'Permanent Marker';
+    color: #19456B;
+    font-size: 1.2rem;
+    border: none; 
+    height: 500px;
+    width: 100%;
+    padding: 15px 60px;
+    background-size: 100%;
+}
+
+.textarea:focus {
+    border: none;
 }
