--- a/animatedCountdown/animatedCountdown.css
+++ b/animatedCountdown/animatedCountdown.css
@@ -7,11 +7,17 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-color: #071A52;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.counter {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #A7FF83;
 }
