--- a/animatedCountdown/animatedCountdown.css
+++ b/animatedCountdown/animatedCountdown.css
@@ -62,3 +62,19 @@ body {
         transform: translate(-50%, -50%) scale(1);
     }
 }
+
+.numbers {
+    font-size: 50px;
+    position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 50px;
+}
+
+.numbers span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(120deg);
+    transform-origin: bottom center;
+}
