--- a/animatedCountdown/animatedCountdown.css
+++ b/animatedCountdown/animatedCountdown.css
@@ -13,6 +13,12 @@ body {
     margin: 0;
 }
 
+h4 {
+    font-size: 20px;
+    margin: 5px;
+    text-transform: uppercase;
+}
+
 .counter {
     position: fixed;
     top: 50%;
@@ -41,7 +47,8 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
+    text-align: center;
 }
 
 .final.show {
@@ -78,3 +85,13 @@ body {
     transform: translate(-50%, -50%) rotate(120deg);
     transform-origin: bottom center;
 }
+
+numbers span.in {
+    transform: translate(-50%, -50%) rotate(0deg);
+    animation: goIn 0.5s ease-in-out;
+}
+
+numbers span.out {
+    animation: goOut 0.5s ease-in-out;
+}
+
