--- a/animatedCountdown/animatedCountdown.css
+++ b/animatedCountdown/animatedCountdown.css
@@ -95,3 +95,35 @@ numbers span.out {
     animation: goOut 0.5s ease-in-out;
 }
 
+@keyframes goIn {
+    0% {
+      transform: translate(-50%, -50%) rotate(120deg);
+    }
+  
+    30% {
+      transform: translate(-50%, -50%) rotate(-20deg);
+    }
+  
+    60% {
+      transform: translate(-50%, -50%) rotate(10deg);
+    }
+  
+    100% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+  }
+
+  @keyframes goOut {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+  
+    60% {
+      transform: translate(-50%, -50%) rotate(20deg);
+    }
+  
+    100% {
+      transform: translate(-50%, -50%) rotate(-120deg);
+    }
+  }
+
