--- a/animatedCountdown/animatedCountdown.css
+++ b/animatedCountdown/animatedCountdown.css
@@ -8,94 +8,94 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #071A52;
-    overflow: hidden;
-    height: 100vh;
     margin: 0;
-}
-
-h4 {
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  h4 {
     font-size: 20px;
     margin: 5px;
     text-transform: uppercase;
-}
-
-.counter {
+  }
+  
+  .counter {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #A7FF83;
-}
-
-.counter.hide {
+  }
+  
+  .counter.hide {
     transform: translate(-50%, -50%) scale(0);
-    animation: hide .2s ease-out;
-}
-
-@keyframes hide {
+    animation: hide 0.2s ease-out;
+  }
+  
+  @keyframes hide {
     0% {
-        transform: translate(-50%, -50%) scale(1);
+      transform: translate(-50%, -50%) scale(1);
     }
-
+  
     100% {
-        transform: translate(-50%, -50%) scale(0);
+      transform: translate(-50%, -50%) scale(0);
     }
-}
-
-.final {
+  }
+  
+  .final {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     text-align: center;
-}
-
-.final.show {
+  }
+  
+  .final.show {
     transform: translate(-50%, -50%) scale(1);
     animation: show 0.2s ease-out;
-}
-
-@keyframes show {
+  }
+  
+  @keyframes show {
     0% {
-        transform: translate(-50%, -50%) scale(0);
+      transform: translate(-50%, -50%) scale(0);
     }
-
+  
     30% {
-        transform: translate(-50%, -50%) scale(1.4);
+      transform: translate(-50%, -50%) scale(1.4);
     }
-
+  
     100% {
-        transform: translate(-50%, -50%) scale(1);
+      transform: translate(-50%, -50%) scale(1);
     }
-}
-
-.numbers {
+  }
+  
+  .numbers {
+    color: #3498db;
     font-size: 50px;
     position: relative;
     overflow: hidden;
     width: 250px;
     height: 50px;
-}
-
-.numbers span {
+  }
+  
+  .numbers span {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(120deg);
     transform-origin: bottom center;
-}
-
-numbers span.in {
+  }
+  
+  .numbers span.in {
     transform: translate(-50%, -50%) rotate(0deg);
     animation: goIn 0.5s ease-in-out;
-}
-
-numbers span.out {
+  }
+  
+  .numbers span.out {
     animation: goOut 0.5s ease-in-out;
-}
-
-@keyframes goIn {
+  }
+  
+  @keyframes goIn {
     0% {
       transform: translate(-50%, -50%) rotate(120deg);
     }
@@ -112,7 +112,7 @@ numbers span.out {
       transform: translate(-50%, -50%) rotate(0deg);
     }
   }
-
+  
   @keyframes goOut {
     0% {
       transform: translate(-50%, -50%) rotate(0deg);
@@ -126,4 +126,3 @@ numbers span.out {
       transform: translate(-50%, -50%) rotate(-120deg);
     }
   }
-
