--- a/imageCarousel/imageCarousel.css
+++ b/imageCarousel/imageCarousel.css
@@ -7,11 +7,32 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #FF6F5E;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.image-container {
+    display: flex;
+    transform: translateX(0);
+    transition: transform 0.5s ease-in-out;
+    
+}   
+
+.carousel {
+    border: solid 7px #DEFF8B;
+    background-color: #DEFF8B;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    height: 530px;
+    width: 500px;
+    overflow: hidden;
+}
+
+img {
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
 }
