--- a/imageCarousel/imageCarousel.css
+++ b/imageCarousel/imageCarousel.css
@@ -1,5 +1,5 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Kaushan+Script&display=swap');
 
 * {
     box-sizing: border-box;
@@ -26,7 +26,7 @@ body {
     border: solid 7px #DEFF8B;
     background-color: #DEFF8B;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    height: 530px;
+    height: 550px;
     width: 500px;
     overflow: hidden;
 }
@@ -35,4 +35,25 @@ img {
     width: 500px;
     height: 500px;
     object-fit: cover;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    padding: 3px;
+    width: 37%;
+    background-color: #AA26DA;
+    border: none;
+    border-radius: 7px;
+    margin-top: 3px;
+    font-size: 18px;
+    font-family: 'Kaushan Script';
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 87%
 }
