--- a/hoverBoard/hoverboard.css
+++ b/hoverBoard/hoverboard.css
@@ -18,6 +18,10 @@ body {
 
 .container {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 400px;
 }
 
 .square {
