--- a/hoverBoard/hoverboard.css
+++ b/hoverBoard/hoverboard.css
@@ -1,14 +1,15 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Tourney:wght@500&display=swap');
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Tourney', sans-serif;
+    color: black;
     background-color: #B31E6F;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -30,7 +31,7 @@ body {
     height: 16px;
     width: 16px;
     margin: 2px;
-    transition: 2s ease;
+    transition: 3s ease;
 }
 
 .square:hover {
