--- a/pokedex/pokedex.css
+++ b/pokedex/pokedex.css
@@ -1,17 +1,21 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:300,400&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    background: #efefbb;
+    background: linear-gradient(to right, #d4d3dd, #afefbb);
+    font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    height: 100vh;
     margin: 0;
+}
+
+h1 {
+    letter-spacing: 3px;
 }
