--- a/pokedex/pokedex.css
+++ b/pokedex/pokedex.css
@@ -19,3 +19,30 @@ body {
 h1 {
     letter-spacing: 3px;
 }
+
+.poke-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: space-between;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+.pokemon {
+    background-color: #eee;
+    border-radius: 10px;
+}
+
+.pokemon .img-container {
+    background-color: grey;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    text-align: center;
+}
+
+.pokemon .img-container img {
+    max-width: 90%;
+    margin-top: 20px;
+}
