--- a/mobileTab/mobileTabNav.css
+++ b/mobileTab/mobileTabNav.css
@@ -25,7 +25,7 @@ body {
 }
 
 .phone .content {
-    /* opacity: 0;  */
+    opacity: 0; 
     object-fit: cover;
     position: absolute;
     top: 0;
@@ -33,4 +33,33 @@ body {
     height: calc(100% - 60px);
     width: 100%;
     transition: opacity 0.4s ease;
+}
+
+.phone .content.show {
+    opacity: 1;
+}
+
+.nav {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-top: -5px;
+    width: 100%;
+}
+
+.nav ul {
+    background-color: white;
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    height: 60px;
+}
+
+.nav li {
+    color: #086972;
+    cursor: pointer;
+    flex: 1;
+    padding: 10px;
+    text-align: center;
 }
