--- a/mobileTab/mobileTabNav.css
+++ b/mobileTab/mobileTabNav.css
@@ -40,7 +40,7 @@ body {
     opacity: 1;
 }
 
-.nav {
+nav {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -48,7 +48,7 @@ body {
     width: 100%;
 }
 
-.nav ul {
+nav ul {
     background-color: white;
     display: flex;
     list-style-type: none;
@@ -57,7 +57,7 @@ body {
     height: 60px;
 }
 
-.nav li {
+nav li {
     color: #086972;
     cursor: pointer;
     flex: 1;
@@ -65,11 +65,12 @@ body {
     text-align: center;
 }
 
-.nav ul li p {
+nav ul li p {
     font-size: 12px;
     margin: 2px 0;
 }
 
-.nav ul li:hover, nav ul li:active {
+nav ul li:hover, 
+nav ul li:active {
     color: #A7FF83;  
 }
