--- a/passwordStrength/passwordStrength.css
+++ b/passwordStrength/passwordStrength.css
@@ -1,5 +1,3 @@
-/*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -14,4 +12,16 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.background {
+    background: url('https://images.unsplash.com/photo-1504386106331-3e4e71712b38?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80') 
+    no-repeat center center/cover;
+    position: absolute;
+    top: -20px;
+    bottom: -20px;
+    right: -20px;
+    left: -20px;
+    z-index: -1;
+    filter: blur(25px);
 }
