--- a/verifyAccount/verifyAccount.css
+++ b/verifyAccount/verifyAccount.css
@@ -7,11 +7,27 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #E8F6EF;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.container {
+    background-color: #B8DFD8;
+    border: 3px #4C4C6D solid;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 1000px;
+    text-align: center;
+}
+
+.code-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 40px;
 }
