--- a/verifyAccount/verifyAccount.css
+++ b/verifyAccount/verifyAccount.css
@@ -42,11 +42,24 @@ body {
     margin: 1px;
     text-align: center;
     font-weight: 300;
+    -moz-appearance: textfield;
 }
 
 .code::-webkit-outer-spin-button,
 .code::-webkit-inner-spin-button {
 -webkit-appearance: none;
 margin: 0;
+}
 
+.code:valid {
+    border-color: #4C4C6D;
+    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
+}
+
+.info {
+    background-color: #B8DFD8;
+    display: inline-block;
+    padding: 10px;
+    line-height: 20px;
+    max-width: 400px;
 }
