--- a/verifyAccount/verifyAccount.css
+++ b/verifyAccount/verifyAccount.css
@@ -57,9 +57,23 @@ margin: 0;
 }
 
 .info {
-    background-color: #B8DFD8;
+    background-color: #6f8884;
     display: inline-block;
     padding: 10px;
     line-height: 20px;
     max-width: 400px;
+    color: #E4EFE7;
+    border-radius: 5px;
+}
+
+@media(max-width: 600px) {
+    .code-container {
+        flex-wrap: wrap;
+    }
+
+    .code {
+        font-size: 50px;
+        height: 70px;
+        max-width: 60px;
+    }
 }
