--- a/liveUser/liveUser.css
+++ b/liveUser/liveUser.css
@@ -21,5 +21,33 @@ body {
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 300px;
+}
 
+.title {
+    margin: 0;
+}
+
+.subtitile {
+    display: inline-block;
+    margin: 5px 0 20px;
+    opacity: 0.8;
+}
+
+header {
+    background-color: #FED049;
+    padding: 30px 20px;
+}
+
+header input {
+    background-color: #F0C929;
+    border: 0;
+    border-radius: 30px;
+    color: white;
+    font-size: 14px;
+    padding: 10px 15px;
+    width: 100%;
+}   
+
+header input:focus {
+    outline: none;
 }
