--- a/liveUser/liveUser.css
+++ b/liveUser/liveUser.css
@@ -18,6 +18,7 @@ body {
 
 .container {
     border-radius: 10px;
+    border: solid 7px #282846;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 300px;
@@ -50,4 +51,25 @@ header input {
 
 header input:focus {
     outline: none;
+}
+
+.user-list {
+    background-color: white;
+    list-style-type: none;
+    margin: 0;
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 0;
+}
+
+.user-list li {
+    display: flex;
+    padding: 20px;
+}
+
+.user-list img {
+    border-radius: 50%;
+    object-fit: cover;
+    height: 65px;
+    width: 65px;
 }
