--- a/liveUser/liveUser.css
+++ b/liveUser/liveUser.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #D8EBE4;
-    color: 007580;
+    color: #007580;
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -16,9 +16,13 @@ body {
     margin: 0;
 }
 
+h1 {
+    color: #282846;
+}
+
 .container {
     border-radius: 10px;
-    border: solid 7px #282846;
+    border: solid 7px #007580;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 300px;
@@ -54,7 +58,8 @@ header input:focus {
 }
 
 .user-list {
-    background-color: white;
+    background-color: #282846;
+    color: #F0C929;
     list-style-type: none;
     margin: 0;
     max-height: 400px;
@@ -69,7 +74,26 @@ header input:focus {
 
 .user-list img {
     border-radius: 50%;
+    border: #F0C929 solid 3px;
     object-fit: cover;
     height: 65px;
     width: 65px;
+    padding: 4px;
 }
+
+.user-list .user-info h4 {
+    margin: 0 0 10px;
+}
+
+.user-list .user-info p {
+    font-size: 12px;
+}
+
+.user-list li:not(:last-of-type) {
+    border-bottom: .50px solid #007580 ;
+}
+
+.user-list li.hide {
+    display: none;
+}
+
