--- a/userFeedback/userFeedback.css
+++ b/userFeedback/userFeedback.css
@@ -20,6 +20,7 @@ body {
     background-color: #CDFFFC;
     box-shadow: 0 0 15px rgba(2, 0, 0, 0.4);
     border-radius: 4px;
+    border: solid 3px #FF577F;
     font-size: 90%;
     display: flex;
     flex-direction: column;
@@ -43,4 +44,45 @@ body {
     cursor: pointer;
     padding: 20px;
     margin: 10px 5px;
+}
+
+.rating:hover, .rating:active {
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.rating img {
+    width: 40px;
+}
+
+.rating small {
+    color: #082032;
+    display: inline-block;
+    margin: 10px 0 0;
+}
+
+.rating:hover small, 
+.rating:active small {
+    color: black;
+}
+
+.btn {
+    background-color: #FF884B;
+    border: 0;
+    border-radius: 4px;
+    padding: 12px 30px;
+    cursor: pointer;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.btn:hover {
+    color: yellow;
+    background-color: #f09f77;
+}
+
+.btn:active {
+    transform: scale(.98);
 }
