--- a/userFeedback/userFeedback.css
+++ b/userFeedback/userFeedback.css
@@ -1,6 +1,5 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Teko&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -26,6 +25,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding: 50px;
     max-width: 400px;
 }
@@ -68,9 +68,11 @@ body {
 
 .btn {
     background-color: #FF884B;
+    font-family: 'Teko';
     border: 0;
     border-radius: 4px;
     padding: 12px 30px;
+    font-size: 18px;
     cursor: pointer;
 }
 
@@ -85,4 +87,10 @@ body {
 
 .btn:active {
     transform: scale(.98);
+}
+
+fa-heart {
+    color: red;
+    font-size: 30px;
+    margin-bottom: 10px;
 }
