--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -23,7 +23,7 @@ h2 {
     position: absolute;
     top: 10px;
     font-size: 37px;
-    color: #FDC8AA;
+    color: #BD3246;
 }
 
 .range-container {
@@ -34,4 +34,16 @@ input[type='range'] {
     width: 300px;
     margin: 18px 0;
     -webkit-appearance: none;
+}
+
+input[type='range'] + label {
+    background-color: #fff;
+    position: absolute;
+    top: -25px;
+    left: 110px;
+    width: 80px;
+    padding: 5px 0;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
