--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -47,3 +47,23 @@ input[type='range'] + label {
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+
+/* Styling for Google Chrome and Safari only */
+input[type='range']::-webkit-slider-runnable-track {
+    background: #8D0033;
+    border-radius: 4px;
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+}
+
+/* Styling for Google Chrome and Safari only */
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 24px;
+    width: 24px;
+    background: white;
+    border-radius: 50%;
+    border: 1px solid #740021;
+    margin-top: -7px;
+}
