--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -36,6 +36,10 @@ input[type='range'] {
     -webkit-appearance: none;
 }
 
+input[type='range']:focus {
+    outline: none;
+}
+
 input[type='range'] + label {
     background-color: #fff;
     position: absolute;
@@ -66,4 +70,24 @@ input[type='range']::-webkit-slider-thumb {
     border-radius: 50%;
     border: 1px solid #740021;
     margin-top: -7px;
+}
+
+/* Styling for Firefox */
+input[type='range']::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 24px;
+    width: 24px;
+    background: white;
+    border-radius: 50%;
+    border: 1px solid #740021;
+    margin-top: -7px;
+}
+
+/* Styling for Firefox */
+input[type='range']::-moz-range-track {
+    background: #8D0033;
+    border-radius: 4px;
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
 }
