--- a/customRangeSlider/customSlider.css
+++ b/customRangeSlider/customSlider.css
@@ -57,7 +57,7 @@ input[type='range']::-webkit-slider-runnable-track {
     background: #8D0033;
     border-radius: 4px;
     width: 100%;
-    height: 10px;
+    height: 14px;
     cursor: pointer;
 }
 
@@ -81,6 +81,7 @@ input[type='range']::-moz-range-thumb {
     border-radius: 50%;
     border: 1px solid #740021;
     margin-top: -7px;
+    cursor: pointer;
 }
 
 /* Styling for Firefox */
@@ -88,6 +89,36 @@ input[type='range']::-moz-range-track {
     background: #8D0033;
     border-radius: 4px;
     width: 100%;
-    height: 10px;
+    height: 14px;
     cursor: pointer;
+}
+
+-webkit-appearance: none;
+height: 24px;
+width: 24px;
+background: white;
+border-radius: 50%;
+border: 1px solid #740021;
+margin-top: -7px;
+}
+
+/* Styling for Internet Explorer */
+input[type='range']::-ms-thumb {
+-webkit-appearance: none;
+height: 24px;
+width: 24px;
+background: white;
+border-radius: 50%;
+border: 1px solid #740021;
+margin-top: -7px;
+cursor: pointer;
+}
+
+/* Styling for Internet Explorer */
+input[type='range']::-ms-track {
+background: #8D0033;
+border-radius: 4px;
+width: 100%;
+height: 14px;
+cursor: pointer;
 }
